// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowRight component match snapshot correctly 1`] = `
<svg
  fill=""
  height={24}
  stroke=""
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  transform="rotate(-90)"
  viewBox="0 0 24 24"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="6 9 12 15 18 9"
  />
</svg>
`;

exports[`ArrowRight component match snapshot correctly 2`] = `
<ArrowUp
  color=""
  size={24}
>
  <svg
    fill=""
    height={24}
    stroke=""
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    transform="rotate(-90)"
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="6 9 12 15 18 9"
    />
  </svg>
</ArrowUp>
`;
